# ProgrammingProject_2025S2_101229262

./: .gitignore  BUILD_AND_SAVE_FIXES.md  CMakeLists.txt  DATA_STRUCTURES_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  main.cpp  test_stack_queue.cpp
assets/dialogues/: DIALOGUE_FORMAT.md  awakening.txt  crossroads.txt  ending.txt  merchant.txt  path_of_industry.txt  path_of_predation.txt  path_of_vanity.txt  quest_start.txt  script.txt
base/headers/: BidirectionalIterator.h  ConcreteElementA.h  ConcreteElementB.h  ConcreteVisitor.h  DoublyLinkedNode.h  Element.h  ForwardIterator.h  HashEntry.h  HashTable.h  Hasher.h  List.h  NTree.h  Queue.h  SinglyLinkedList.h  SinglyLinkedNode.h  Stack.h  Visitor.h
headers/: BidirectionalIterator.h  DoublyLinkedNode.h  HashTable.h  Hasher.h  List.h  NTree.h  Queue.h  SinglyLinkedNode.h  Stack.h
src/: AssetPaths.h
src/dialogue/: Choice.cpp  Choice.h  Dialogue.cpp  Dialogue.h  DialogueGraph.cpp  DialogueGraph.h
src/engine/: DialogueDebugVisitor.cpp  DialogueDebugVisitor.h  DialogueLogVisitor.cpp  DialogueLogVisitor.h  DialogueManager.cpp  DialogueManager.h  DialogueRenderVisitor.cpp  DialogueRenderVisitor.h  DialogueUI.cpp  DialogueUI.h  DialogueVisitor.cpp  DialogueVisitor.h  GameEngine.cpp  GameEngine.h
src/engine/states/: GameState.h  InGameState.cpp  InGameState.h  LoadGameState.cpp  LoadGameState.h  MainMenuState.cpp  MainMenuState.h  SettingsState.cpp  SettingsState.h
src/game/: Inventory.h  Item.h  Player.h  PlayerStats.h  SaveSystem.cpp  SaveSystem.h  Settings.h
